@@ -70,6 +70,8 @@ apt (0.9.5.2) UNRELEASED; urgency=low
   [ Thibaut Girka ]
   * cmdline/apt-get.cc:
     - complain correctly about :any build-dep on M-A:none packages
+  * apt-pkg/deb/deblistparser.cc:
+    - add support for arch-specific qualifiers in dependencies
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 06 Jun 2012 23:54:01 +0200
 
